discussion/kv_engine/176460/176460_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Separate setMaxDataSize() into components

We'll re-use many of these components in the BucketQuotaChangeTask
in future patches. setMaxDataSize() will remain as-is for the sake
of initial quota setting and unit tests that don't work nicely with
an extra task.

Change-Id: Ie0e229f60ec949df0027094e90996876e318f62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-28 18:59:17.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-28 19:06:21.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47163/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47163/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20629/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20629/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8175/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8175/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21273/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21273/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21273/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20283/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20283/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19499/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19499/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28665/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28665/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17552/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/bucket_quota_change_task.cc b/engines/ep/src/bucket_quota_change_task.cc
index 723aeeacb..3970d26ea 100644
--- a/engines/ep/src/bucket_quota_change_task.cc
+++ b/engines/ep/src/bucket_quota_change_task.cc
@@ -46,9 +46,9 @@ bool BucketQuotaChangeTask::run() {
         if (!setNewQuotaIfMemoryUsageAcceptable(changeState.desiredQuota)) {
             quotaChangeState.state = ChangeState::WaitingForMemoryReclamation;
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
-//            wakeUp();
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
+            //            wakeUp();
             EP_LOG_CRITICAL_RAW(&quot;starting to wait&quot;);
         }
 
@@ -56,9 +56,9 @@ bool BucketQuotaChangeTask::run() {
     case ChangeState::WaitingForMemoryReclamation:
         if (!setNewQuotaIfMemoryUsageAcceptable(changeState.desiredQuota)) {
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
-//            wakeUp();
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
+            //            wakeUp();
             EP_LOG_CRITICAL_RAW(&quot;waiting&quot;);
             break;
         }
diff --git a/engines/ep/tests/module_tests/bucket_quota_change_test.cc b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
index a33fc44bc..3f3969140 100644
--- a/engines/ep/tests/module_tests/bucket_quota_change_test.cc
+++ b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
@@ -316,7 +316,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
     }
 
     // Poke the item and the pager setting to ensure that we will evict it
-    store-&gt;getVBucket(vbid)-&gt;ht.findOnlyCommitted(key)
+    store-&gt;getVBucket(vbid)
+            -&gt;ht.findOnlyCommitted(key)
             .storedValue-&gt;setFreqCounterValue(0);
     engine-&gt;getConfiguration().setItemEvictionAgePercentage(0);
     engine-&gt;getConfiguration().setItemEvictionFreqCounterAgeThreshold(255);
@@ -354,8 +355,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
 
     if (STParameterizedBucketTest::isMagma()) {
         // Allow magma 10 seconds to reduce memory.
-        auto timeout = std::chrono::steady_clock::now() +
-                std::chrono::seconds(10);
+        auto timeout =
+                std::chrono::steady_clock::now() + std::chrono::seconds(10);
         while (engine-&gt;getEpStats().getMaxDataSize() != newQuota) {
             if (timeout &lt; std::chrono::steady_clock::now()) {
                 // We waited too long for magma to reduce memory usage. Either

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17552/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18404/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18404/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18404/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39620/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39620/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8075/ : FAILURE

Compile error at [2022-06-28T19:04:18.858Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8075/ )
----------------------------------------------------------------------------------------------------------------------
